--- a/testimonials.html
+++ b/testimonials.html
@@ -66,6 +66,44 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
+
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "image": "https://house-mate.com.au/assets/images/logo.jpg",
+        "name": "HouseMate Automation",
+        "servesCuisine": "None",
+        "priceRange": "$$$",
+        "telephone": "03 9666 3333",
+        "address" :{
+          "@type": "PostalAddress",
+          "streetAddress": "123 William St",
+          "addressLocality": "New York",
+          "addressRegion": "NY",
+          "postalCode": "10038",
+          "addressCountry": "US"
+        }
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "4"
+      },
+      "name": "A really specialised team.",
+      "author": {
+        "@type": "Person",
+        "name": "Daniel"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Google"
+      }
+    }
+    </script>
+ 
 <body>
 
 
