--- a/testimonials.html
+++ b/testimonials.html
@@ -215,7 +215,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <p>House-mate smart pool and spa solutions connect pool controllers to your Wi-Fi network enabling full control via HomeKit™ or Siri™.</p><p>Pool and spa automation will simplify your pool maintenance, save money on your energy bills, prevent damage to your pool equipment, and ultimately save you valuable time. &nbsp;</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Control pool and spa water temperature, lights, pumps, filtration, and even chemicals automatically. &nbsp;You can manage and control your pool settings from wherever you are, 24 hours a day.</span><br></p><p>Heat up the spa before you come home so it's ready for you to jump straight in!</p>
+                     <p><span style="font-size: 1rem;">Control pool and spa water temperature, lights, pumps, filtration, and even chemicals automatically. &nbsp;You can manage and control your pool settings from wherever you are, 24 hours a day.</span><br></p><p>Heat up the spa before you come home so it is ready for you to jump straight in!</p>
                 </div>
                 
             </div>
