--- a/remote.html
+++ b/remote.html
@@ -139,7 +139,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    			"name": "✅ Are there compatibility issues with remote control blasters?",
    			"acceptedAnswer": {
    				"@type": "Answer",
-   				"text": "Compatibility depends on the specific remote blaster and the devices you want to control. Most blasters are designed to work with a wide range of devices, but it's essential to check for compatibility information. Housemate ensures the remote control blasters we work with operate on both Apple and Google platforms."
+   				"text": "Compatibility depends on the specific remote blaster and the devices you want to control. Most blasters are designed to work with a wide range of devices, but it is essential to check for compatibility information. Housemate ensures the remote control blasters we work with operate on both Apple and Google platforms."
    			}
    		}]
    	}
@@ -456,7 +456,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Are there compatibility issues with certain brands or models?</p>
             </div>
             <div class="accordion__answer">
-                <p>Compatibility depends on the specific remote blaster and the devices you want to control. Most blasters are designed to work with a wide range of devices, but it's essential to check for compatibility information.</p>
+                <p>Compatibility depends on the specific remote blaster and the devices you want to control. Most blasters are designed to work with a wide range of devices, but it is essential to check for compatibility information.</p>
             </div>
             </div>
 
@@ -501,7 +501,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>Are there security concerns with using a remote blaster?</p>
             </div>
             <div class="accordion__answer">
-                <p>Security risks are minimal since remote blasters typically only transmit RF and infra-red signals to control devices. However, it's essential to follow best practices, such as securing your home network. Reach out to HouseMate if you need advice in securing your home network.</p>
+                <p>Security risks are minimal since remote blasters typically only transmit RF and infra-red signals to control devices. However, it is essential to follow best practices, such as securing your home network. Reach out to HouseMate if you need advice in securing your home network.</p>
             </div>
             </div>
 
