--- a/testimonials.html
+++ b/testimonials.html
@@ -78,14 +78,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "name": "HouseMate Automation",
       
         "priceRange": "$$$",
-        "telephone": "03 9666 3333",
+        "telephone": "03 9000 3555",
         "address" :{
           "@type": "PostalAddress",
-          "streetAddress": "123 William St",
-          "addressLocality": "New York",
-          "addressRegion": "NY",
-          "postalCode": "10038",
-          "addressCountry": "US"
+          "streetAddress": "1/257 Auburn Road",
+          "addressLocality": "Hawthorn",
+          "addressRegion": "VIC",
+          "postalCode": "3122",
+          "addressCountry": "AU"
         }
       },
       "reviewRating": {
