--- a/testimonials.html
+++ b/testimonials.html
@@ -242,7 +242,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             St.Kilda Triple Storey</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">"Andrew and his team brought our old CBUS installation into the modern world and also incorporated other devices that were already in the house.  We can now control CBUS via Apple HomeKit as well as our Acmeda blinds, projector and motorised screen.  The team also added additional wifi switches to light circuits that weren't part of the CBUS installation.  We also needed to call on House-Mate for warranty of the CBUS interface and Andrew organised its replacement.  We are now considering expanding the solution to include the garage door and outside heating panels. Highly recommended!" - Vjera K</p>
+                        <p class="mbr-text mbr-fonts-style display-7">"Andrew and his team brought our old CBUS installation into the modern world and also incorporated other devices that were already in the house.  We can now control CBUS via Apple HomeKit as well as our Acmeda blinds, projector and motorised screen.  The team also added additional wifi switches to light circuits that were not part of the CBUS installation.  We also needed to call on House-Mate for warranty of the CBUS interface and Andrew organised its replacement.  We are now considering expanding the solution to include the garage door and outside heating panels. Highly recommended!" - Vjera K</p>
                     </div>
                 </div>
             </div>
