--- a/landing310124.html
+++ b/landing310124.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 <head>
-<link rel="canonical" href="https://house-mate.com.au/landing.html" />
+<link rel="canonical" href="https://house-mate.com.au/landing310124.html" />
 <meta property="og:title" content="House-mate Smart Home Automation">
 <meta property="og:description" content="Centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
