--- a/landing310124.html
+++ b/landing310124.html
@@ -279,7 +279,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h2 class="align-center mbr-fonts-style display-2"><p><strong>
                     <br></strong><strong>Who are we?</strong></p></h2>
                     <div class="item-role px-2"><p>
-                    Based in Melbourne, our team blends skillsets from electrical engineering to IT<br>architecture and we are continually learning from our experiences<br>in delivering exciting and practical solutions to market.<br><br><br></p></div>
+                    House-Mate's passion is to deliver cost effectively, properly architected smart home solutions that dont cost an arm and a leg.  The team blends skillsets from electrical engineering to IT<br>architecture and we are continually learning from our experiences<br>in delivering exciting and practical solutions to market.<br><br><br></p></div>
             </div>
             </section>
 <section class="mbr-section info1 cid-tsOy9qPlSL" id="info1-7z" style="background-color: #efefef;">
