--- a/cbus130324a.html
+++ b/cbus130324a.html
@@ -283,10 +283,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Connect your CBUS instance to Apple HomeKit™ and use Siri™ to control any connected accessory in the house.</p><p>Do you have an CBUS system with a clunky app that is difficult to operate on your phone? &nbsp;<span style="font-size: 1rem;">Why not integrate it into HomeKit and easily control the behaviour of any connected accessory via Apple's intuitive HomeKit app or by voice. It's very simple to program your own Scenes or Automations using HomeKit.&nbsp;</span></p>
+                     <p>House-mate integration solutions connect CBUS controllers to your Wi-Fi network and enable full control via HomeKit™ or Siri™, or Google Home</p><p>Do you have an CBUS system that stands alone? &nbsp;<span style="font-size: 1rem;">Why not integrate it into HomeKit and control any element of your CBUS home via your mobile or voice.&nbsp;</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">The HouseMate controller bridges connectivity between your CBUS installation and your local network. Our service includes all installation, programming and configuration of your Groups and Devices, including an in home handover that shows owners how to easily customise their solution.</span></p>
+                     <p><span style="font-size: 1rem;">The Clipsal CNI bridges connectivity between your CBUS installation and your local network. &nbsp;Our s</span><span style="font-size: 1rem;">ervice includes all installation, programming and configuration of your Groups and Devices.&nbsp;</span></p>
                 </div>
                 
             </div>
@@ -315,7 +315,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">First step</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">The HouseMate controller is compatible with newer and older CBUS solutions.  If your system is a Wiser2 solution it can easily be connected, as can older solutions via a bridge called the CBUS Network Interface (CNI). It can be installed by a qualified CBUS electrician.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">In order for your CBUS to talk to House-mate, a bridge called the Cbus Network Interface needs to be installed&nbsp;by a qualified CBUS electrician. RRP $850, install ~$350.</p>
                     </div>
                 </div>
             </div>
@@ -333,7 +333,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Keep your CBUS switches</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Existing wall switches can be kept and their functionality maintained with additional control provided via voice or from your iPhone using Apple HomeKit.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Existing wall switches can be kept and their functionality controlled via voice or from your iPhone,&nbsp;</p>
                     </div>
                 </div>
             </div>
